prism overflow fixed using word-break

--- a/src/styles/components/_prism.scss
+++ b/src/styles/components/_prism.scss
@@ -14,3 +14,9 @@
   display: inline-block;
   border: 1px solid hsla(0deg, 0%, 100%, 0.87);
 }
+
+code[class*="language-"],
+pre[class*="language-"] {
+  white-space: normal !important;
+  word-break: break-word !important;
+}
